	both bug-gnu-emacs (etc) and debbugs.
	(debbugs-emacs): Default to list the done bugs.
	(debbugs-toggle-sort): New command and keystroke.
	(debbugs-send-control-message): Record the bug number on group
	entry, so that we don't have to rely on subject header mangling,
	which is fragile.
	(debbugs-emacs): Display multiple merges prettier.

2011-07-02  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-emacs): Propertize with 'help-echo.
	(debbugs-mode-map): Define key "q".
	(debbugs-send-control-message): Prompt for version number for
	"close" and "done" control messages.

2011-07-02  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs.el (debbugs-new, debbugs-handled, debbugs-stale)
	(debbugs-done, debbugs-emacs, debbugs-mode-map, debbugs-mode)
	(debbugs-select-report, debbugs-summary-mode-map)
	(debbugs-summary-mode, debbugs-send-control-message): Move to ...
	* debbugs-gnu.el: New file.

2011-07-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs.el (debbugs-send-control-message): Add more control
	messages.
	(debbugs-done): Add a face for done bugs.

2011-07-02  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs.el (debbugs-emacs): Let-bind `debbugs-port' to "gnu.org".
	Ask how many reports to retrieve, when `debbugs-get-bugs' returns
	more than 400 hits.

2011-07-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs.el (debbugs-send-control-message): Add severity and "done".
	(debbugs-select-report): Set the minor summary mode in the right
	buffer.
	(debbugs-send-control-message): Fix typo in the "done" case.
	(debbugs-emacs): Allow listing archived bugs.

2011-06-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs.el (debbugs-emacs): New function and modes for listing
	the Emacs bugs, reading them and updating them.

2011-06-12  Evgeny M. Zubok <zoubok@mail.ru>

	* debbugs.el (top): Pacify byte compiler.
	(debbugs): New custom group.
	(debbugs-servers): New defcustom.
	(debbugs-port): Allow user defined ports.